--- a/specialties/bachelor/029.html
+++ b/specialties/bachelor/029.html
@@ -78,7 +78,7 @@
                   <div class="flex__subtitle">Номер: 029</div>
                   <div class="flex__subtitle">Назва спеціальності:</div>
                   <h1 class="flex__title">
-                    Інформаційна, бібліотечна справа та архівна справа
+                    Інформаційна, бібліотечна та архівна справа
                   </h1>
                 </div>
               </div>
@@ -101,42 +101,94 @@
               />
             </div>
             <div class="flex__text">
-              Освітня програма «Інформаційна діяльність» – це можливість
-              оволодіння: - здатністю визначати перспективні напрямки розвитку
-              інформаційної справи з урахуванням особливостей функціонування
-              сучасної інформаційно-технологічної інфраструктури; - методологією
-              інформаційно-аналітичної діяльності; - професійними навичками у
-              сфері проектування, експлуатації і вдосконалення новітніх
-              інформаційних технологій, що ґрунтуються на застосуванні,
-              проектуванні й актуалізації баз і банків даних; - навичками
-              проведення комплексних досліджень структури ринку інформаційної
-              продукції та послуг у нашій країні та країнах світу; - здатністю
-              використовувати досягнення та ресурси соціокультурної сфери,
-              виробництва та економіки для забезпечення повноцінного
-              функціонування держави. Опанування освітньо-професійної програми
-              «Інформаційна діяльність» забезпечує професійну діяльність в усіх
-              без винятку сферах інформаційної інфраструктури суспільства. Перед
-              Вами відкриються двері управлінських структур, юридичних та
-              банківських установ, великого, малого та середнього бізнесу. Ви
-              матимете нагоду достойно представляти національний бізнесовий,
-              науковий, дипломатичний інформаційний простір на рівнях держав
-              Європи та світу в цілому, професійно володіючи методами
-              інформаційно-аналітичної діяльності, кількома іноземними мовами,
-              сучасними інформаційними технологіями. Формат професійної
-              реалізації випускників ОПП «Інформаційна діяльність» – державні
-              органи управління; інформаційні агентства та
-              інформаційно-аналітичні служби; центри науково-технічної
-              інформації, стандартизації та сертифікації; патентні та
-              маркетингові підрозділи підприємств та науково-освітніх установ;
-              адміністративні, кадрові та діловодні служби державних та
-              комерційних організацій; засоби масової інформації; рекламні та
-              консалтингові фірми; управління документального забезпечення
-              фінансових та банківських структур; архівні підрозділи
-              підприємств, організацій, установ, об’єднань різного профілю та
-              форм власності відповідно до галузевого стандарту вищої освіти
-              України. Ласкаво запрошуємо до спілкування всіх, хто прагне
-              відчути неповторність студентських років і забезпечити собі
-              професійне та кар’єрне зростання!
+              <div>
+                Освітні програми «Інформаційна, бібліотечна та архівна справа» –
+                це можливість оволодіння - професійними навичками у сфері
+                проектування, експлуатації і вдосконалення новітніх
+                інформаційних технологій, що будуються на застосуванні,
+                проектуванні й актуалізації баз і банків даних, проведення
+                комплексних досліджень структури ринку інформаційної продукції
+                та послуг у нашій країні і за її межами; - здатністю визначати
+                перспективні напрямки розвитку інформаційної, бібліотечної та
+                архівної справи з урахуванням досягнень соціокультурної сфери,
+                виробництва та економіки, особливостей функціонування сучасної
+                інформаційно-технологічної інфраструктури; - здатністю
+                використовувати ресурси сучасних мегакультурних центрів для
+                забезпечення повноцінного розвитку особистості шляхом підготовки
+                (з використанням методів інформаційно-аналітичної діяльності),
+                надання та розповсюдження інформаційних продуктів і послуг.
+                Опанування освітньої програми “Інформаційна, бібліотечна та
+                архівна справа” – прекрасна можливість обійняти модерні посади в
+                усіх без винятку сферах інформаційного забезпечення суспільства.
+                Перед Вами відкриються двері управлінських структур, юридичних
+                та банківських установ, великого, малого та середнього бізнесу.
+                Ви матимете нагоду достойно представляти національний
+                бізнесовий, науковий, дипломатичний інформаційний простір на
+                рівнях держав Європи та світу в цілому, професійно володіючи
+                методами інформаційно-аналітичної діяльності, кількома
+                іноземними мовами, сучасними інформаційними технологіями. Сфера
+                професійної реалізації – державні органи управління;
+                інформаційні агентства та інформаційно-аналітичні служби; центри
+                науково-технічної інформації, стандартизації та сертифікації;
+                патентні та маркетингові підрозділи підприємств та
+                науково-освітніх установ; адміністративні, кадрові та діловодні
+                служби державних та комерційних організацій; засоби масової
+                інформації; рекламні та консалтингові фірми; управління
+                документального забезпечення фінансових та банківських структур;
+                архівні підрозділи підприємств, організацій, установ, об’єднань
+                різного профілю та форм власності відповідно до галузевого
+                стандарту вищої освіти України. Ласкаво запрошуємо до
+                спілкування усіх, хто прагне відчути неповторність студентських
+                років і відкрити собі шлях до професійного зростання!
+              </div>
+
+              <hr />
+
+              <div class="flex__center">
+                <h3>Освітня програма «Інформаційна діяльність»</h3>
+              </div>
+
+              <hr />
+
+              <div>
+                Освітня програма «Інформаційна діяльність» – це можливість
+                оволодіння: - здатністю визначати перспективні напрямки розвитку
+                інформаційної справи з урахуванням особливостей функціонування
+                сучасної інформаційно-технологічної інфраструктури; -
+                методологією інформаційно-аналітичної діяльності; - професійними
+                навичками у сфері проектування, експлуатації і вдосконалення
+                новітніх інформаційних технологій, що ґрунтуються на
+                застосуванні, проектуванні й актуалізації баз і банків даних; -
+                навичками проведення комплексних досліджень структури ринку
+                інформаційної продукції та послуг у нашій країні та країнах
+                світу; - здатністю використовувати досягнення та ресурси
+                соціокультурної сфери, виробництва та економіки для забезпечення
+                повноцінного функціонування держави. Опанування
+                освітньо-професійної програми «Інформаційна діяльність»
+                забезпечує професійну діяльність в усіх без винятку сферах
+                інформаційної інфраструктури суспільства. Перед Вами відкриються
+                двері управлінських структур, юридичних та банківських установ,
+                великого, малого та середнього бізнесу. Ви матимете нагоду
+                достойно представляти національний бізнесовий, науковий,
+                дипломатичний інформаційний простір на рівнях держав Європи та
+                світу в цілому, професійно володіючи методами
+                інформаційно-аналітичної діяльності, кількома іноземними мовами,
+                сучасними інформаційними технологіями. Формат професійної
+                реалізації випускників ОПП «Інформаційна діяльність» – державні
+                органи управління; інформаційні агентства та
+                інформаційно-аналітичні служби; центри науково-технічної
+                інформації, стандартизації та сертифікації; патентні та
+                маркетингові підрозділи підприємств та науково-освітніх установ;
+                адміністративні, кадрові та діловодні служби державних та
+                комерційних організацій; засоби масової інформації; рекламні та
+                консалтингові фірми; управління документального забезпечення
+                фінансових та банківських структур; архівні підрозділи
+                підприємств, організацій, установ, об’єднань різного профілю та
+                форм власності відповідно до галузевого стандарту вищої освіти
+                України. Ласкаво запрошуємо до спілкування всіх, хто прагне
+                відчути неповторність студентських років і забезпечити собі
+                професійне та кар’єрне зростання!
+              </div>
             </div>
             <div class="flex__center mt-20">
               <a
